--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Autencticar no Docker Hub
         run: echo "Executando o Docker Login"
       - name: Construção da Imagem
-        run: exho "Executando o comando Docker build"
+        run: echo "Executando o comando Docker build"
       - name: Envio da Imagem Docker
         run: "Executando o comando Docker push"
   cd:
@@ -20,6 +20,6 @@ jobs:
       - name: Autencticar na AWS
         run: echo "Executando o comando aws config"
       - name: Configurar o kubectl
-        run: exho "Executando o comando aws eks update-kubeconfig"
+        run: echo "Executando o comando aws eks update-kubeconfig"
       - name: Deploy dos manifests no kubernetes
         run: "Executando o comando kubectl apply"
