--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,18 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
+      - name: Obter o nome do projeto
+        uses: actions/checkout@v4
+        
       - name: Autencticar no Docker Hub
-        run: echo "Executando o Docker Login"
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Construção da Imagem
         run: echo "Executando o comando Docker build"
+        
       - name: Envio da Imagem Docker
         run: echo "Executando o comando Docker push"
   cd:
