--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
       - name: Construção da Imagem
-        run: echo "Executando o comando Docker build"
-        
-      - name: Envio da Imagem Docker
-        run: echo "Executando o comando Docker push"
+        uses: docker/build-push-action@v6
+        with:
+          context: ./src
+          push: true
+          file: ./src/Dockerfile
+          tags: |
+            ruanilazzarotto/fake-shop:latest
+            ruanilazzarotto/fake-shop:v{{ gihub.run_number }}
   cd:
     runs-on: ubuntu-latest
     needs: [ci]
