--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           file: ./src/Dockerfile
           tags: |
             ruanilazzarotto/fake-shop:latest
-            ruanilazzarotto/fake-shop:v{{ github.run_number }}
+            ruanilazzarotto/fake-shop:v${{ github.run_number }}
   cd:
     runs-on: ubuntu-latest
     needs: [ci]
